--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.41.1
 numpy==2.0.2
 matplotlib==3.10.0
-opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
 open3d==0.19.0
 pillow==10.4.0
 scipy==1.15.1
